# ChangeLog for genkernel
# Copyright 1999-2008 Gentoo Foundation; 2008 Chris Gianelloni
# Distributed under the GPL v2

  21 Aug 2008; Andrew Gaffney <agaffney@gentoo.org> gen_cmdline.sh,
  gen_determineargs.sh, genkernel, genkernel.conf:
  Remove broken grub code

  07 Aug 2008; Andrew Gaffney <agaffney@gentoo.org> gen_initramfs.sh:
  Only append splash portion to initramfs if SPLASH is set

  29 Jul 2008; Andrew Gaffney <agaffney@gentoo.org> genkernel.8:
  Fix typo in man page, butt -> but

  29 Jul 2008; Andrew Gaffney <agaffney@gentoo.org> defaults/udhcpc.scripts:
  Add support to udhcpc.scripts for default route and DNS servers/domain

  29 Jul 2008; Andrew Gaffney <agaffney@gentoo.org> defaults/initrd.scripts:
  Remove check for >=2.6 for mounting sysfs

  29 Jul 2008; Andrew Gaffney <agaffney@gentoo.org> genkernel:
  Remove check for >=2.6 for 'make prepare'

  29 Jul 2008; Andrew Gaffney <agaffney@gentoo.org> gen_bootloader.sh,
  gen_configkernel.sh, gen_moddeps.sh, genkernel.8:
  Remove a few more 2.4 kernel support remnants

  29 Jul 2008; Andrew Gaffney <agaffney@gentoo.org> gen_arch.sh, genkernel:
  Cleanup remaining references to ${ARCH}/ without arch/ prefix

  29 Jul 2008; Andrew Gaffney <agaffney@gentoo.org> +arch/um/busy-config,
  +arch/um/config.sh, +arch/um/kernel-config, +arch/um/modules_load,
  -um/busy-config, -um/config.sh, -um/kernel-config, -um/modules_load:
  Move um/ underneath arch/ where it belongs

  28 Jul 2008; Chris Gianelloni <wolf31o2@wolf31o2.org> gen_compile.sh:
  Removed some unused dietlibc code.

  28 Jul 2008; Chris Gianelloni <wolf31o2@wolf31o2.org> TODO,
  gen_bootloader.sh, gen_compile.sh, gen_configkernel.sh,
  gen_determineargs.sh, genkernel:
  Removed a large chunk of 2.4 kernel support. This will still require some
  fairly extensive cleaning to completely remove, but I'd say that without a
  shadow of a doubt, genkernel will not function on 2.4 kernels.
