@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; 2008 Chris Gianelloni
 # Distributed under the GPL v2
 
+  21 Aug 2008; Andrew Gaffney <agaffney@gentoo.org> -gen_bootloader.sh,
+  -gen_bootloader_grub.awk:
+  Remove unneeded files for broken grub code
+
   21 Aug 2008; Andrew Gaffney <agaffney@gentoo.org> gen_cmdline.sh,
   gen_determineargs.sh, genkernel, genkernel.conf:
   Remove broken grub code
